# diagnostics-framework

./: .gitignore  README.md  pyproject.toml  sample_data.csv
diagnostics_framework/: __init__.py  app.py  models.py  registry.py  runner.py
diagnostics_framework/systems/: __init__.py  generic_example.py  sensor_monitoring.py
